--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   },
   "dependencies": {
     "axios": "^1.8.3",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
